--- a/.github/workflows/games.yml
+++ b/.github/workflows/games.yml
@@ -17,15 +17,6 @@ jobs:
       matrix:
         game:
           - altv
-          - arma3
-          - dayz                
-          - mohaa
-          - rust
-          - samp
-          - source
-          - valheim
-          - thebattleforwesnoth
-          
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -75,5 +66,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/pelican-eggs/games:${{ matrix.game }}
-            ghcr.io/parkervcp/games:${{ matrix.game }}
+            ghcr.io/oratorian/games:${{ matrix.game }}
