--- a/.github/workflows/games.yml
+++ b/.github/workflows/games.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.WORKFLOW }}
+          password: ${{ secrets.WORKFFLOW }}
       - uses: docker/build-push-action@v5
         with:
           context: ./games/${{ matrix.game }}
@@ -34,8 +34,7 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/pelican-eggs/games:${{ matrix.game }}
-            ghcr.io/parkervcp/games:${{ matrix.game }}
+            ghcr.io/oratorian/games:${{ matrix.game }}
   pushAll:
     name: "games_All:${{ matrix.game }}"
     runs-on: ubuntu-latest
@@ -58,7 +57,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
+          password: ${{ secrets.WORKFLOW}}
       - uses: docker/build-push-action@v5
         with:
           context: ./games/${{ matrix.game }}
