--- a/.github/workflows/games.yml
+++ b/.github/workflows/games.yml
@@ -1,4 +1,5 @@
 name: build games
+
 on:
   workflow_dispatch:
   schedule:
@@ -8,6 +9,7 @@ on:
       - master
     paths:
       - games/**
+
 jobs:
   pushAMD64:
     name: "games_AMD64:${{ matrix.game }}"
@@ -17,17 +19,21 @@ jobs:
       matrix:
         game:
           - altv
+
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+
       - uses: docker/setup-buildx-action@v3
         with:
           buildkitd-flags: --debug
+
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.WORKFFLOW }}
-      - uses: docker/build-push-action@v5
+          password: ${{ secrets.WORKFLOW }}
+
+      - uses: docker/build-push-action@v4
         with:
           context: ./games/${{ matrix.game }}
           file: ./games/${{ matrix.game }}/Dockerfile
