--- a/.github/workflows/games.yml
+++ b/.github/workflows/games.yml
@@ -36,8 +36,8 @@ jobs:
       - uses: docker/build-push-action@v4
         with:
           context: ./games/${{ matrix.game }}
-          file: ./games/altv/Dockerfile
+          file: ./games/${{ matrix.game }}/Dockerfile
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/Oratorian/games:${{ matrix.game }}
+            ghcr.io/oratorian/games:${{ matrix.game }}
