--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
+          password: ${{ secrets.WORKFLOW }}
       - uses: docker/build-push-action@v5
         with:
           context: ./bot/${{ matrix.tag }}
