--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -50,7 +50,7 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache-new
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/yolks:bot_${{ matrix.tag }}
+            ghcr.io/oratorian/yolks:bot_${{ matrix.tag }}
       - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
