--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -16,12 +16,12 @@ jobs:
       fail-fast: false
       matrix:
         tag:
-          - parkertron
+          #- parkertron
           - red
-          - sinusbot
-          - bastion
+          #- sinusbot
+          #- bastion
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@main
       - uses: docker/setup-buildx-action@v3
         with:
           buildkitd-flags: --debug
