--- a/.github/workflows/mongodb.yml
+++ b/.github/workflows/mongodb.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
+          password: ${{ secrets.WORKFLOW }}
       - uses: docker/build-push-action@v5
         with:
           context: ./mongodb
@@ -39,5 +39,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/pelican-eggs/yolks:mongodb_${{ matrix.tag }}
-            ghcr.io/parkervcp/yolks:mongodb_${{ matrix.tag }}
+            ghcr.io/oratorian/yolks:mongodb_${{ matrix.tag }}
