--- a/games/fivem/Dockerfile
+++ b/games/fivem/Dockerfile
@@ -1,38 +1,58 @@
-#
-# Copyright (c) 2021 Matthew Penner
-#
-# Permission is hereby granted, free of charge, to any person obtaining a copy
-# of this software and associated documentation files (the "Software"), to deal
-# in the Software without restriction, including without limitation the rights
-# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-# copies of the Software, and to permit persons to whom the Software is
-# furnished to do so, subject to the following conditions:
-#
-# The above copyright notice and this permission notice shall be included in all
-# copies or substantial portions of the Software.
-#
-# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-# SOFTWARE.
-#
+FROM        --platform=$TARGETOS/$TARGETARCH debian:bullseye-slim
 
-FROM        --platform=$BUILDPLATFORM alpine:latest
+LABEL       author="David Wolfe (Red-Thirten)" maintainer="red_thirten@yahoo.com"
 
-LABEL       author="Matthew Penner" maintainer="matthew@pterodactyl.io"
-
-LABEL       org.opencontainers.image.source="https://github.com/pterodactyl/yolks"
+LABEL       org.opencontainers.image.source="https://github.com/parkervcp/yolks"
 LABEL       org.opencontainers.image.licenses=MIT
 
-RUN         apk add --update --no-cache ca-certificates c-ares icu-libs libssl1.1 libunwind musl musl-dbg tzdata zlib \
-			&& adduser -D -h /home/container container
+## Update base packages and install dependencies
+ENV         DEBIAN_FRONTEND=noninteractive
+RUN         dpkg --add-architecture i386 \
+            && apt-get update \
+            && apt-get upgrade -y \
+            && apt-get install -y \
+                curl \
+                tzdata \
+                locales \
+                iproute2 \
+                gettext-base \
+                ca-certificates \
+                numactl \
+                libssl-dev \
+                lib32gcc-s1 \
+                libsdl2-2.0-0 \
+                libsdl2-2.0-0:i386 \
+                libstdc++6 \
+                libstdc++6:i386 \
+                lib32stdc++6 \
+                libnss-wrapper \
+                libnss-wrapper:i386 \
+                libtbb2 \
+                libtbb2:i386 \
+                tini
 
+## Configure locale
+RUN         update-locale lang=en_US.UTF-8 \
+            && dpkg-reconfigure --frontend noninteractive locales
+
+## Prepare NSS Wrapper for the entrypoint as a workaround for Arma 3 requiring a valid UID
+ENV         NSS_WRAPPER_PASSWD=/tmp/passwd NSS_WRAPPER_GROUP=/tmp/group
+RUN         touch ${NSS_WRAPPER_PASSWD} ${NSS_WRAPPER_GROUP} \
+            && chgrp 0 ${NSS_WRAPPER_PASSWD} ${NSS_WRAPPER_GROUP} \
+            && chmod g+rw ${NSS_WRAPPER_PASSWD} ${NSS_WRAPPER_GROUP}
+ADD         passwd.template /passwd.template
+
+## Setup user and working directory
+RUN         useradd -m -d /home/container -s /bin/bash container
 USER        container
 ENV         USER=container HOME=/home/container
 WORKDIR     /home/container
 
-COPY        ./entrypoint.sh /entrypoint.sh
-CMD         [ "/bin/ash", "/entrypoint.sh" ]
+## Copy over entrypoint.sh and set permissions
+COPY        --chown=container:container ./entrypoint.sh /entrypoint.sh
+RUN         chmod +x /entrypoint.sh
+
+## Start with Tini to pass future stop signals correctly
+STOPSIGNAL  SIGINT
+ENTRYPOINT  ["/usr/bin/tini", "-g", "--"]
+CMD         ["/entrypoint.sh"]
