--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -16,9 +16,9 @@ jobs:
       fail-fast: false
       matrix:
         oses:
-          - alpine
+        #  - alpine
           - debian
-          - ubuntu
+        #  - ubuntu
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
@@ -29,7 +29,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
+          password: ${{ secrets.WORKFLOW }}
       - uses: docker/build-push-action@v5
         with:
           context: ./oses/${{ matrix.oses }}
@@ -37,5 +37,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/pelican-eggs/yolks:${{ matrix.oses }}
-            ghcr.io/parkervcp/yolks:${{ matrix.oses }}
+            ghcr.io/oratorian/yolks:${{ matrix.oses }}
