--- a/.github/workflows/games.yml
+++ b/.github/workflows/games.yml
@@ -18,8 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         game:
-         # - altv
-          - fivem
+         - altv
 
     steps:
       - uses: actions/checkout@v4
